--- a/progress_chart.css
+++ b/progress_chart.css
@@ -1,8 +1,8 @@
 .progress-chart-area {
     width: 100%;
     height: 100%;
-    background: white;
-    border: 1px solid #4B78A8;
+    background: #F2F5FA;
+    border: 1px solid #F2F5FA;
     border-radius: 5px;
     opacity: 0.9;
     margin: auto;
@@ -19,7 +19,6 @@
     font-weight: bold;
     border-radius: 5px 0 0 5px;
     position: relative;
-    text-align: center;
 
     -webkit-animation: fill-area-percent 3s 0s forwards;
     animation: fill-area-percent 3s 0s forwards;
