높이 고정값 수정 및 차트에도 색상 추가

--- a/progress_chart.css
+++ b/progress_chart.css
@@ -1,6 +1,6 @@
 .progress-chart-area {
     width: 100%;
-    height: 100%;
+    height: 10px;
     background: #F2F5FA;
     border: 1px solid #F2F5FA;
     border-radius: 5px;
