--- a/progress_chart2/progress_chart2.css
+++ b/progress_chart2/progress_chart2.css
@@ -30,7 +30,7 @@
     transform: translate(-50%, -50%); */
     position: relative;
     top: 5px;
-    font-size: small;
+    font-size: medium;
 
     font-weight: 600;
 }
